--- a/estilos.css
+++ b/estilos.css
@@ -29,7 +29,7 @@
 
 .header{
     width: 100%;
-    background-image: linear-gradient(-225deg, #2cd8d560 0%, #c5c1ff5d 56%, #ffbac362 100%), url("imagenes/siete.jpg");
+    background-image: linear-gradient(-225deg, #2cd8d560 0%, #c5c1ff5d 56%, #ffbac362 100%), url("siete.jpg");
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
